# weather-agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Plan.md  README.md  cloudbuild-dev.yaml  cloudbuild.yaml  demo_logging.py  deploy.sh  pyproject.toml  setup-cicd.sh
.github/workflows/: deploy.yml
app/: main.py
app/models/: __init__.py  nlp.py  weather.py
app/routers/: __init__.py  calendar.py  nlp.py  weather.py
app/services/: __init__.py  agent_service.py  calendar_service.py  nlp_service.py  weather_service.py
frontend/: README.md  index.html  script.js  style.css
scripts/: setup-env.sh
tests/: README.md  conftest.py  test_agent.py  test_calendar_api.py  test_health.py  test_integration.py  test_nlp_api.py  test_weather_api.py
